--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-      #コンテナ→ホストへの反映を早くするために:cached
-      - .:/workspace:cached
+      #コンテナ→ホストへの反映を早くするため:cached
+      - .:/workspace:cached\
       - nextjs-node-modules:/workspace/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
