コンテナ名を記載

--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "NextJS",
-    "dockerComposeFile": "./docker-compose.yml",
+    "dockerComposeFile": "../docker-compose.yml",
     "service": "nextjs",
     "workspaceFolder": "/workspace",
     "extensions": [],
