add mongodb container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,9 @@
     "dockerComposeFile": "../docker-compose.yml",
     "service": "nextjs",
     "workspaceFolder": "/workspace",
+    "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash"
+    },
     "extensions": [
         "esbenp.prettier-vscode"
     ],
