--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: '3'
+version: "3"
 services:
   nextjs:
-    build: .
+    build:
+      context: .
+      dockerfile: ./nodejs/Dockerfile
     container_name: nextjs
     tty: true
     restart: always
-    command: npm run dev
+    # command: npm run dev
     ports:
       - 3000:3000
     volumes:
@@ -14,6 +16,27 @@ services:
       - nextjs-node-modules:/workspace/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+
+  mongo:
+    build:
+      context: .
+      dockerfile: ./db/mongodb/Dockerfile
+    restart: always
+    volumes:
+      - ./db/mongodb/db:/data/db
+    ports:
+      - 27017:27017
+
+  mongo-express:
+    build: ./db/mongo_express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_URL="mongodb://root:password@mongo:27017/"
+    depends_on:
+      - mongo
+
 #node-modulesがバインドマウントされるのを回避
 volumes:
   nextjs-node-modules:
